Configuration finale de discord

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         );
 
         if (allRequestsOK) {
-            alert('✅ Recensement envoyé avec succès à Mathys en plusieurs parties !');
+            alert('✅ Recensement envoyé avec succès à Mathys en plusieurs parties ! Merci de vos réponses.');
             form.reset();
             window.scrollTo({ top: 0, behavior: "smooth" });
         } else {
